# boat_telemetry

./: .aptly.conf  Cargo.toml  README.md  justfile
.github/workflows/: build.yml  release.yml
debian/: service
src/: main.rs
